Refactor route notificartions to guarantee UI update being done in the EDT. Refactor WW panel